# self-adaptive

./: .gitignore  CMakeLists.txt  cmake.sh  run.sh  simulation.cpp
archive/: learning_pseudocode.tex  optimizer for evaluation.cpp  optimizer_constraints.tex  optimizer_initial_working.cpp  optimizer_multi.cpp  optimizer_multi_evaluation_first_working.cpp  optimizer_multi_prune.cpp  optimizer_multi_sos.cpp  optimizer_multi_stable.cpp  optimizer_pseudocode.tex  optimizer_single_advance.cpp  parameter.h
archive/viz/: cluster_plot.py  csv_data_range.py  csv_data_range_A_B_C.py  optimization_analysis_bar.py  optimizer_analysis_2.py
dataset/model_parameter_set/: generate_test_set.py
include/: callback.h  constraint_tuner.h  managed_system.h  model_learning.h  monitor.h  optimizer.h  parameter.h  self_adaptive.h  validator.h  weather_forecast.h
src/: callback.cpp  constraint_tuner.cpp  managed_system.cpp  managed_system_helper_function.cpp  model_learning.cpp  monitor.cpp  optimizer.cpp  self_adaptive.cpp  tmp  validator.cpp  weather_forecast.cpp
trash/: model.lp  model_infeasible.ilp  simulation.cpp  tmp
trash/UAV/: UAV_sensor.cpp  UAV_sensor.h
trash/edge/: model.cpp  model.h
trash/tb/: camera_power_tb.cpp
validation/: optimizer_debugging.oy.py
visualization/: cluster_plot.py  clustering.py  coefficient_actuator_analysis.py  coefficient_sensor_analysis.py  csv_data_range.py  csv_data_range_A_B_C.py  learning_time_analysis.py  log_coefficient_actuator.py  log_coefficient_sensor.py  loss_analysis.py  optimization_analysis.py  optimization_analysis_bar.py  optimization_timing_analysis.py  optimizer_analysis_2.py  plot_loss_log.py  threshold_anomaly_finder.py  tmp  weather_forecast_analysis.py  weather_forecast_viz.py  weather_forecast_viz_2.py
